# sonicsift

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
.github/: copilot-instructions.md
backend/: build_worker.py  pyproject.toml  requirements.txt  sonicsift-worker.spec
backend/sonicsift/: __init__.py  assembly.py  chunking.py  config.py  detection.py  enhance.py  export.py  ffmpeg.py  ingest.py  main.py
backend/tests/: test_chunking.py  test_detection.py
docker/: Dockerfile.dev  docker-compose.dev.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/components/: LogPanel.tsx  Logo.tsx  ProgressBar.tsx  SegmentTimeline.tsx  Sidebar.tsx
src/hooks/: useSidecar.ts
src/pages/: ExportPage.tsx  ImportPage.tsx  ProgressPage.tsx  ReviewPage.tsx  SettingsPage.tsx
src/stores/: jobStore.ts  settingsStore.ts
src/types/: index.ts
