[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonicsift"
version = "0.1.0"
description = "Audio processing worker for SonicSift – silence detection, speech enhancement, and audio export."
requires-python = ">= 3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "noisereduce>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
